fixed box break on pgcr page (#182)

--- a/src/components/__deprecated__/pgcr/pgcr.module.css
+++ b/src/components/__deprecated__/pgcr/pgcr.module.css
@@ -2,7 +2,7 @@
     --border: 1px solid rgba(111, 111, 111, 0.229);
     flex: 1;
     padding: 0.8em;
-    min-width: min-content;
+    min-width: min(min-content, 100%);
 
     background-color: rgba(30, 30, 30, 0.35);
 
@@ -148,7 +148,8 @@
 }
 
 .grid {
-    min-width: 320px;
+    min-width: min(100%, 320px);
+    max-width: 100%;
     margin-top: 10px;
     border-radius: 10px;
     height: auto;
@@ -159,7 +160,7 @@
 }
 
 .members-low {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
 }
 
 .entry-card {
@@ -555,7 +556,7 @@
         display: none;
     }
     .grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
     }
     .entry-card {
         height: 69px;
